# moseiik

./: .dockerignore  .gitignore  Cargo.toml  DockerScript.sh  Dockerfile  Readme.md
.github/workflows/: ci.yml  test.yml
src/: main.rs
tests/: .temp.rs.swp  temp.rs
