[package]
name = "moseiik"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
image = "0.25.2"
threadpool = "1.8.1"
threadpool_scope = "0.1.0"
num_cpus = "1.16.0"
